--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,34 @@
     color: #fff;
     background-color: black;
 }
+
+/* carrito */
+#carritoLista {
+    list-style: none;
+    padding: 10px;
+    margin: 10px; 
+    border: 5px solid black;
+    background-color: lightgray;
+}
+
+/* concurrencia */
+pre{
+    text-align: left;
+    background-color: black;
+    padding: 1rem;
+    border-radius: 10px;
+    width: 80%;
+    color: greenyellow;
+}
+
+/* try catch */
+#bodyTry {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#mensaje{
+    font-weight: bold;
+    color: red;
+}
